[package]
name = "memory_allocator"
version = "0.1.0"
authors = ["Jorge Luis Pérez <jolisper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libmemory_allocator"
path = "src/lib.rs"

[[bin]]
name = "memory_allocator"
path = "src/bin.rs"

[dependencies]
libc = "0.2"
